dnl Process this file with autoconf to produce a configure script.
AC_INIT(monitorps.c)

AM_INIT_AUTOMAKE(monitorps, v1.10)
AM_CONFIG_HEADER(config.h)

dnl Default for GVS and friends.
AC_PREFIX_DEFAULT(/usr/local/trmm/GVBOX)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_YACC
AM_PROG_LEX
AC_PATH_PROGS(perlbin,perl)

if test $prefix = NONE; then
  prefix=$ac_default_prefix
fi
LIBDIR="-L$prefix/lib -L/usr/local/lib"

dnl Check for libgdbm.
AC_CHECK_LIB(gdbm,gdbm_open,,,$LIBDIR)
LIBS="$LIBDIR $LIBS"

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h malloc.h sys/file.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_SETPGRP
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(gethostname gettimeofday putenv select socket strdup strstr strtol)

AC_OUTPUT(Makefile)
